Single Page Applications Part 2

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+// some basic resets 
+@import 'variables';
+@import '../node_modules/font-awesome/scss/font-awesome';
+body { 
+  padding: 0; 
+  margin: 0; 
+  font-family: Roboto, sans-serif; 
+  
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+.container {
+  margin: 20px;
+  display:flex;
+}
+
+
