--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -15,15 +15,16 @@ fxLayoutGap.xs="0">
           <h3>{{dish.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+      <img height="400px" mat-card-image src={{dish.image}} alt={{dish.name}}>
       <mat-card-content>
         <p>{{dish.description}}
         </p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button (click)="goBack()">BACK</button>
+
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-        <button mat-button (click)="goBack()">BACK</button>
       </mat-card-actions>
     </mat-card>
   </div>
