--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       <h3>{{dish.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+  <img  height="400px" mat-card-image src={{dish.image}} alt={{dish.name}}>
   <mat-card-content>
     <p>{{dish.description}}
     </p>
@@ -26,11 +26,25 @@
       <h3>{{promotion.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+  <img   height="400px" mat-card-image src={{promotion.image}} alt={{promotion.name}}>
   <mat-card-content>
     <p>{{promotion.description}}
     </p>
   </mat-card-content>
 </mat-card>
+<mat-card *ngIf="promotion" fxFlex>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>
+        <h3>{{leader.name }} {{leader.abbr}}</h3>
+      </mat-card-title>
+    </mat-card-header>
+    <img   height="350px" mat-card-image src={{leader.image}} alt={{promotion.name}}>
+    <mat-card-content>
+      {{leader.designation}}  
+      <p>{{leader.description}}
+      </p>
+    </mat-card-content>
+  </mat-card>
 
 </div>
